Finish integrating user, and test booking process. :book:
